Mypy strict mode and related stub fixes [no ci]

--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,7 @@ deps =
     {[common_dep]deps}
 skip_install = true
 commands =
-    mypy --show-error-codes --show-error-context --pretty lxml-stubs
+    mypy --strict --show-error-context --pretty lxml-stubs
 
 [testenv:pyright]
 deps =
