--- a/test-data/test-html-element.yml
+++ b/test-data/test-html-element.yml
@@ -138,7 +138,7 @@
     from lxml.html import HtmlElement
     elem: HtmlElement
     result = elem.text_content()
-    reveal_type(result)  # N: Revealed type is "builtins.str"
+    reveal_type(result)  # N: Revealed type is "lxml.etree._ElementUnicodeResult[lxml.html.HtmlElement]"
     result = elem.text_content(None)  # E: Too many arguments for "text_content" of "HtmlElement"  [call-arg]
 
 - case: mixin_method_iterlinks
