--- a/test-data/test-builder.yml
+++ b/test-data/test-builder.yml
@@ -78,16 +78,16 @@
     - method: __nonExistent__
   main: |
     from lxml.html.builder import E
-    reveal_type(E.{{ method }})  # N: Revealed type is "def (*Any, **Any) -> lxml.html.HtmlElement"
-    reveal_type(E.{{ method }}())  # N: Revealed type is "lxml.html.HtmlElement"
+    reveal_type(E.{{ method }})  # NR: Revealed type is "def \(\*Any, \*\*Any\) -> [\w\.]+\.HtmlElement"
+    reveal_type(E.{{ method }}())  # NR: Revealed type is "[\w\.]+\.HtmlElement"
 
 - case: html_builder_existing_tag
   main: |
     from lxml.html.builder import TABLE, TR, TD
-    reveal_type(TD)  # N: Revealed type is "def (*Any, **Any) -> lxml.html.HtmlElement"
-    reveal_type(TD("content", id="cell"))  # N: Revealed type is "lxml.html.HtmlElement"
+    reveal_type(TD)  # NR: Revealed type is "def \(\*Any, \*\*Any\) -> [\w\.]+\.HtmlElement"
+    reveal_type(TD("content", id="cell"))  # NR: Revealed type is "[\w\.]+\.HtmlElement"
     result = TABLE(TR(TD("content")))
-    reveal_type(result)  # N: Revealed type is "lxml.html.HtmlElement"
+    reveal_type(result)  # NR: Revealed type is "[\w\.]+\.HtmlElement"
 
 # Modified from html.builder docstring example
 - case: html_builder_complex_example
@@ -101,4 +101,4 @@
         id="content",
       )
     )
-    reveal_type(html)  # N: Revealed type is "lxml.html.HtmlElement"
+    reveal_type(html)  # NR: Revealed type is "[\w\.]+\.HtmlElement"
