--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,6 @@ python =
 [common_dep]
 deps =
     types-beautifulsoup4
-    types-html5lib
 
 [testenv]
 commands = pytest {posargs}
@@ -34,11 +33,11 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy ~= 1.0
+    mypy == 1.1.*
     {[common_dep]deps}
 skip_install = true
 commands =
-    mypy --strict --show-error-context --pretty lxml-stubs
+    mypy
 
 [testenv:pyright]
 deps =
