Pyright version requirement for PEP 696

--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ commands =
 
 [testenv:pyright]
 deps =
-    pyright
+    pyright >= 1.1.288
     {[common_dep]deps}
 skip_install = true
 commands =
